--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jscript-extender",
   "version": "0.0.1",
-  "description": "",
+  "description": "JScriptExtender",
   "main": "dest/JScriptExtender.js",
   "directories": {
     "test": "test"
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/poppycocker/JScriptExtender.git"
   },
   "author": "poppycocker",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/poppycocker/JScriptExtender/issues"
   },
@@ -22,6 +22,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1"
   }
